--- a/_includes/nav_sidebar.html
+++ b/_includes/nav_sidebar.html
@@ -164,8 +164,8 @@
     <aside class="sidebar">
       
       <nav class="sidebar__menu">
-        <a href="">Home</a>
-        <a href="">About us</a>
+        <a href="index1.html">Home</a>
+        <a href="index2.html">About us</a>
         <a href="">Services</a>
         <a href="">Products</a>
         <a href="">Contact</a>
