--- a/_includes/nav_sidebar.html
+++ b/_includes/nav_sidebar.html
@@ -164,9 +164,9 @@
     <aside class="sidebar">
       
       <nav class="sidebar__menu">
-        <a href="index1.html">Home</a>
-        <a href="index2.html">About us</a>
-        <a href="">Services</a>
+        <a href="index.html">Home</a>
+        <a href="index1.html">Posts</a>
+        <a href="index2.html">Posts2</a>
         <a href="">Products</a>
         <a href="">Contact</a>
       </nav>
