--- a/_includes/nav_sidebar.html
+++ b/_includes/nav_sidebar.html
@@ -38,22 +38,22 @@
 
 .sidebar {
   height: 100vh;
-  width: 320px;
-  background: #fff;
+  width: 45vw;
+  background-color: rgba(255, 255, 255, 0.85);
   position: absolute;
   top: 0;
   left: 0;
   padding: 0 60px;
   display: flex;
   flex-direction: column;
-  transform: translatex(-100%);
+  transform: translatex(-100vw);
   transition: transform 0.4s ease-in-out;
 }
 .sidebar__close {
   position: absolute;
   top: 50%;
   right: -30px;
-  background: #fff;
+  background: rgba(255, 255, 255, 0.95);
   height: 60px;
   width: 60px;
   border-radius: 50%;
@@ -79,8 +79,9 @@
 .sidebar__menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
   flex: 1;
-  justify-content: space-around;
+  justify-content: space-evenly;
   font-size: 36px;
   margin-top: 80px;
   margin-bottom: 80px;
@@ -96,7 +97,7 @@
   content: "";
   height: 2px;
   background: #898989;
-  width: 120px;
+  width: 100%;
   position: absolute;
   bottom: -2px;
   left: 0;
@@ -127,15 +128,15 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 0;
+  padding: 0 0 20px 0;
 }
 .sidebar__social li {
   margin: 4px;
 }
 .sidebar__social a, .sidebar__social svg {
   display: inline-block;
-  height: 18px;
-  width: 18px;
+  height: 28px;
+  width: 28px;
 }
 
 .menu-control {
