--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -168,13 +168,14 @@
 }
 
 /* DEMO */
+/* DEMO */
 body {
   background: #fefefe;
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  font-family: "Roboto Mono";
+  font-family: 'Roboto Mono';
 }
 
 h2 {
@@ -193,15 +194,16 @@ h2 {
   padding: 15px;
   line-height: 1;
   min-width: 140px;
-  background: rgba(0, 0, 0, 0.07);
+  background: rgba(0,0,0, 0.07);
   border-radius: 6px;
 }
 
 .demo-btn:hover {
-  background: rgba(0, 0, 0, 0.12);
+  background: rgba(0,0,0,0.12);
 }
 
 @media (max-width: 640px) {
+
   .demo-btn {
     min-width: 0;
     font-size: 14px;
@@ -211,6 +213,11 @@ h2 {
 
 
 <body>
+  <h2>Material Photo Gallery</h2>
+  <p>
+    <a href="https://github.com/micahstubbs/material-photo-gallery" class="demo-btn">Documentation</a>
+    <a href="https://github.com/micahstubbs/material-photo-gallery/archive/master.zip" class="demo-btn" download="material-photo-gallery">Download</a>
+  </p>
 		<div class="m-p-g">
 			<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
                 
