--- a/_includes/mapa.html
+++ b/_includes/mapa.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
        
 
-  <section id="demo" class="gpx" data-gpx-source='/assets/{{ post.folder }}/track.gpx' data-map-target="demo-map">
+  <section id="demo" class="gpx" data-gpx-source='https://raw.githubusercontent.com/nunogand/stream/main/assets/{{ post.folder }}/track.gpx' data-map-target="demo-map">
     <header>
       <h3>Loading...</h3>
       <span class="start"></span>
