--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -1,5 +1,5 @@
 <script
-  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/material-photo-gallery.min.js"></script>
+  src="/assets/js/material-photo-gallery.min.js"></script>
 
 
 <style>
@@ -15,7 +15,7 @@
   float: left;
   vertical-align: bottom;
   cursor: pointer;
-  z-index: 1;
+  z-index: 100;
   position: relative;
   opacity: 0;
   filter: brightness(100%);
@@ -24,7 +24,7 @@
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 .m-p-g__thumbs-img.active {
-  z-index: 50;
+  z-index: 5000;
 }
 .m-p-g__thumbs-img.layout-completed {
   opacity: 1;
@@ -37,7 +37,7 @@
 }
 .m-p-g__fullscreen {
   position: fixed;
-  z-index: 10;
+  z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
@@ -82,7 +82,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 200;
+  z-index: 20000;
   height: 20vh;
   background: linear-gradient(to top, transparent 0%, rgba(0, 0, 0, 0.55) 100%);
   opacity: 0;
@@ -105,7 +105,7 @@
 }
 .m-p-g__controls-arrow {
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   width: 20%;
   height: 100vh;
@@ -132,7 +132,7 @@
   position: absolute;
   top: 3vh;
   left: 3vw;
-  z-index: 5;
+  z-index: 500;
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -151,7 +151,7 @@
 }
 .m-p-g__alertBox {
   position: fixed;
-  z-index: 999;
+  z-index: 99900;
   max-width: 700px;
   top: 50%;
   left: 50%;
@@ -182,6 +182,13 @@ h2 {
   font-weight: 300;
   margin: 4vh 4vw;
   letter-spacing: 3px;
+  color: grey;
+  text-transform: uppercase;
+}
+
+h3 {
+  margin: 4vh 4vw;
+  letter-spacing: 2px;
   color: grey;
   text-transform: uppercase;
 }
@@ -237,7 +244,8 @@ h2 {
 
 <section id="demo" class="gpx" data-gpx-source="/assets/{{page.folder}}/track.gpx" data-map-target="demo-map">
   <header>
-    <h3>Loading...</h3>
+    <!--<h3>Loading...</h3>-->
+    <h3>{{page.title}}</h3>
     <span class="start"></span>
   </header>
 
@@ -247,11 +255,9 @@ h2 {
   
   <footer>
     <ul class="info">
-      <li>Distance:&nbsp;<span class="distance"></span>&nbsp;m</li>
-      &mdash; <li>Duration:&nbsp;<span class="duration"></span></li>
-      &mdash; <li>Pace:&nbsp;<span class="pace"></span>/mi</li>
-      &mdash; <li>Avg&nbsp;HR:&nbsp;<span class="avghr"></span>&nbsp;bpm</li>
-      &mdash; <li>Elevation:&nbsp;+<span class="elevation-gain"></span>&nbsp;ft,
+      <li>Distância:&nbsp;<span class="distance"></span>&nbsp;m</li>
+      &mdash; <li>elev-max:&nbsp;<span class="elev-max"></span></li>
+      &mdash; <li>Elevação:&nbsp;+<span class="elevation-gain"></span>&nbsp;ft,
         -<span class="elevation-loss"></span>&nbsp;ft
         (net:&nbsp;<span class="elevation-net"></span>&nbsp;ft)</li>
     </ul>
@@ -288,7 +294,7 @@ h2 {
 			});
 		</script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
+<script src="/assets/js/leaflet.js"></script>
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.js"></script>-->
    <script src="/assets/js/gpx.js"></script>
     <script type="application/javascript">
@@ -324,18 +330,22 @@ h2 {
           /*
            * Note: the code below relies on the fact that the demo GPX file is
            * an actual GPS track with timing and heartrate information.
-           */
+           
           _t('h3').textContent = gpx.get_name();
-          _c('start').textContent = gpx.get_start_time().toDateString() + ', '
-            + gpx.get_start_time().toLocaleTimeString();
-          _c('distance').textContent = gpx.get_distance().toFixed(2);
+          _c('start').textContent = gpx.get_start_time().toDateString() + ', '   
+            + gpx.get_start_time().toLocaleTimeString();*/
+          _c('distance').textContent = gpx.get_distance().toFixed(0); 
+          /*
           _c('duration').textContent = gpx.get_duration_string(gpx.get_moving_time());
           _c('pace').textContent     = gpx.get_duration_string(gpx.get_moving_pace_imp(), true);
           _c('avghr').textContent    = gpx.get_average_hr();
-          _c('elevation-gain').textContent = gpx.to_ft(gpx.get_elevation_gain()).toFixed(0);
-          _c('elevation-loss').textContent = gpx.to_ft(gpx.get_elevation_loss()).toFixed(0);
-          _c('elevation-net').textContent  = gpx.to_ft(gpx.get_elevation_gain()
+          */
+          _c('elevation-gain').textContent = gpx.get_elevation_gain().toFixed(0);
+          _c('elevation-loss').textContent = gpx.get_elevation_loss().toFixed(0);
+          _c('elevation-net').textContent  = (gpx.get_elevation_gain()
             - gpx.get_elevation_loss()).toFixed(0);
+            _c('elev-max').textContent = gpx.get_elevation_max().toFixed(0);
+            _c
         }).addTo(map);
       }
 
