--- a/_includes/nav_sidebar.html
+++ b/_includes/nav_sidebar.html
@@ -16,6 +16,7 @@
       <nav class="sidebar__menu">
         <a href="index.html">Entrada</a>
         <a href="blog.html">Trilhos</a>
+        <a href="blog1.html">Trilhos2</a>
         <a href="">Sobre</a>
       </nav>
       
