--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -60,7 +60,8 @@
 
 
 
-  <h2>Material Photo Gallery</h2>
+  <h2>{{page.title}}</h2>
+  
   <p>
     <a href="https://github.com/micahstubbs/material-photo-gallery" class="demo-btn">Documentation</a>
     <a href="https://github.com/micahstubbs/material-photo-gallery/archive/master.zip" class="demo-btn" download="material-photo-gallery">Download</a>
