--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -15,12 +15,12 @@
    
     .gpx { border: 2px #aaa solid; border-radius: 5px;
       box-shadow: 0 0 3px 3px #ccc;
-      max-width: 800px; margin: 1em auto; flex: 1 1 20em;}
+      margin: 1em auto; flex: 1 1 20em; max-width: 80vw;}
     .gpx header { padding: 0.5em; }
     .gpx h3 { margin: 0; padding: 0; font-weight: bold; }
     .gpx .start { font-size: smaller; color: #444; }
     .gpx .map { border: 1px #888 solid; border-left: none; border-right: none;
-      max-width: 800px; height: 500px; margin: 0; }
+      max-width: 80vw; height: 500px; margin: 0; }
     .gpx footer { background: #f0f0f0; padding: 0.5em; }
     .gpx ul.info { list-style: none; margin: 0; padding: 0; font-size: smaller; }
     .gpx ul.info li { color: #666; padding: 2px; display: inline; }
@@ -142,8 +142,8 @@
         new L.GPX(url, {
           async: true,
           marker_options: {
-            startIconUrl: '/assets/map-icons/pin-icon-start.png',
-            endIconUrl:   '/assets/map-icons/pin-icon-end.png',
+            startIconUrl: '/assets/map-icons/finish-flag.svg',
+            endIconUrl:   '/assets/map-icons/finish-flag-1.svg',
             shadowUrl:    '/assets/map-icons/pin-shadow.png',
           },
         }).on('loaded', function(e) {
