--- a/css/stream.scss
+++ b/css/stream.scss
@@ -5,3 +5,9 @@
 
 @import "material-photo-gallery";
 @import "stream";
+
+body {
+    background: rgb(238,235,239);
+background: linear-gradient(0deg, rgba(238,235,239,0.6) 88%, rgba(255,255,255,0.6) 88%);
+min-height: 100vh;
+}
