--- a/_includes/nav_sidebar.html
+++ b/_includes/nav_sidebar.html
@@ -14,6 +14,8 @@
         <a href="index.html">Entrada</a>
         <a href="blog.html">Trilhos</a>
         <a href="blog1.html">Trilhos2</a>
+        <a href="blog-bulma.html">Trilhos3</a>
+        <a href="blog-copy.html">Trilhos3</a>
         <a href="">Sobre</a>
       </nav>
       
