--- a/_includes/card-bulma.html
+++ b/_includes/card-bulma.html
@@ -12,7 +12,7 @@
          
      <div class="card-content has-text-centered">
        <header>
-         <h1 class="card_title is-size-4">{{post.title}}</h1>
+         <h1 class="card_title">{{post.title}}</h1>
          
          
      </header>
@@ -20,10 +20,7 @@
        
              <div class="content">
          <p>{{ post.date}}</p>
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-       Phasellus nec iaculis mauris. 
-         </p>     
+      
              </div>
         <button class="btn card_btn">
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" 
