--- a/_includes/card-bulma.html
+++ b/_includes/card-bulma.html
@@ -1,6 +1,6 @@
 
 
-<div class="column  is-full-tablet is-one-third-desktop is-one-third-widescreen is-one-quarter-fullhd mb-4">
+<div class="column  is-half-tablet is-one-third-desktop is-one-third-widescreen is-one-quarter-fullhd mb-4">
     <a href="{{post.url}}"> 
     <div class="card">
          <div class="card-image ">
