--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,6 @@
 <!DOCTYPE html>
+<html lang="pt">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta property="og:locale" content="pt_PT">
