--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -8,15 +8,18 @@
 
 
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+  crossorigin=""/>
+  
 <link rel="stylesheet" href="/css/stream.css" />
 
 <body>
 
   
   <style type="text/css">
-   
-    .gpx { border: 0; border-radius: 5px;
+  <!--
+    /*.gpx { border: 0; border-radius: 5px;
       box-shadow: 0;
       margin: 1em auto; flex: 1 1 20em; max-width: 80vw;}
     .gpx header { padding: 0.5em; }
@@ -27,8 +30,8 @@
     .gpx footer { background: #f0f0f0; padding: 0.5em; }
     .gpx ul.info { list-style: none; margin: 0; padding: 0; font-size: smaller; }
     .gpx ul.info li { color: #666; padding: 2px; display: inline; }
-    .gpx ul.info li span { color: black; }
-    
+    .gpx ul.info li span { color: black; }*/
+  -->     
 
     .leaflet-control-layers {text-align: left;}
     
@@ -38,8 +41,6 @@
 
 <section id="demo" class="gpx" data-gpx-source="/assets/{{page.folder}}/track.gpx" data-map-target="demo-map">
   <header>
-    <!--<h3>Loading...</h3>-->
-    <h3>{{page.title}}</h3>
     <span class="start"></span>
   </header>
 
@@ -56,6 +57,7 @@
         (net:&nbsp;<span class="elevation-net"></span>&nbsp;ft)</li>
     </ul>
   </footer>
+  <h1>{{page.title}}</h1>
 </section>
 
 
@@ -64,12 +66,9 @@
 
 
 
-  <h2>{{page.title}}</h2>
   
-  <p>
-    <a href="https://github.com/micahstubbs/material-photo-gallery" class="demo-btn">Documentation</a>
-    <a href="https://github.com/micahstubbs/material-photo-gallery/archive/master.zip" class="demo-btn" download="material-photo-gallery">Download</a>
-  </p>
+  
+  
 		<div class="m-p-g">
 			<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
                 
@@ -90,8 +89,7 @@
 		</script>
 
 <script src="/assets/js/leaflet.js"></script>
-   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.js"></script>-->
-   <script src="/assets/js/gpx.js"></script>
+<script src="/assets/js/gpx.js"></script>-->
     <script type="application/javascript">
 
       var osmLink = '<a href="https://openstreetmap.org">OpenStreetMap</a>',
