--- a/_sass/stream.css
+++ b/_sass/stream.css
@@ -1,49 +1,75 @@
 body {
-  background: #fefefe;
-  color: white;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  font-family: 'Roboto Mono';
-  /*navegação*/
-  margin-top: 80px;
-}
-
-h2 {
-  font-weight: 300;
-  margin: 4vh 4vw;
-  letter-spacing: 3px;
-  color: grey;
-  text-transform: uppercase;
-}
-
-h3 {
-  margin: 4vh 4vw;
-  letter-spacing: 2px;
-  color: grey;
-  text-transform: uppercase;
-}
-
-.demo-btn {
-  display: inline-block;
-  margin: 0 2.5px 4vh 2.5px;
-  text-decoration: none;
-  color: grey;
-  padding: 15px;
-  line-height: 1;
-  min-width: 140px;
-  background: rgba(0,0,0, 0.07);
-  border-radius: 6px;
-}
-
-.demo-btn:hover {
-  background: rgba(0,0,0,0.12);
-}
-
-@media (max-width: 640px) {
-
-  .demo-btn {
-    min-width: 0;
-    font-size: 14px;
+  margin: 0;
+	padding: 0;
+	background-image: radial-gradient(rgba(255, 0, 0, 0.3), rgba(255, 0, 0, 0) 40vw), radial-gradient(rgba(0, 128, 0, 0.3), rgba(0, 128, 0, 0) 40vw), radial-gradient(rgba(0, 0, 255, 0.3), rgba(0, 0, 255, 0) 40vw), radial-gradient(rgba(255, 255, 0, 0.3), rgba(255, 255, 0, 0) 40vw), radial-gradient(rgba(255, 0, 0, 0.3), rgba(255, 0, 0, 0) 40vw);
+	background-position: -40vw 14rem, 50% 10rem, 60vw 14rem, -10vw calc(14rem + 20vw), 30vw calc(14rem + 20vw);
+	background-size: 80vw 80vw;
+	background-repeat: no-repeat;
+	background-repeat: repeat-x;
+	background-position: center bottom;
   }
+
+/*--GPX--*/
+.gpx {
+  border-radius: 5px;
+	width: 100%;
+	margin: 0em auto;
+	flex: 1 1 20em;
 }
+
+.gpx header {
+	padding: 1em;
+	text-align: right;
+}
+
+.gpx h3 {
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+}
+
+.gpx h1 {
+	text-align: center;
+	font-weight: bold;
+}
+
+.gpx .start {
+	font-size: smaller;
+	color: #444;
+}
+
+.gpx .map {
+	border-left: none;
+	border-right: none;
+	width: 100%;
+	height: 500px;
+	margin: 0;
+}
+
+.gpx footer {
+	background: #f0f0f0;
+	padding: 0.5em;
+	text-align: center;
+}
+
+.gpx ul.info {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: smaller;
+}
+
+.gpx ul.info li {
+	color: #666;
+	padding: 2px;
+	display: inline;
+}
+
+.gpx ul.info li span {
+	color: black;
+}
+/*--end GPX --*/
+
+
+
+
