--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -23,13 +23,13 @@
 
 
 
-<section id="demo" class="gpx" data-gpx-source="/assets/{{page.folder}}/track.gpx" data-map-target="demo-map">
+<section id="mapa" class="gpx" data-gpx-source="/assets/{{page.folder}}/track.gpx" data-map-target="mapa-map">
   <header>
     <span class="start"></span>
   </header>
 
   <article>
-    <div class="map" id="demo-map"></div>
+    <div class="map" id="mapa-map"></div>
   </article>
   
   <footer>
@@ -157,7 +157,7 @@
         }).addTo(map);
       }
 
-      display_gpx(document.getElementById('demo'));
+      display_gpx(document.getElementById('mapa'));
 
     </script>
 
